Initial code.