@@ -8,7 +8,6 @@ package ro.dragos.geornoiu;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
-import java.util.List;
 
 
 public class Game implements IGame {
@@ -17,14 +16,15 @@ public class Game implements IGame {
     //~ Instance fields 
     //~ ----------------------------------------------------------------------------------------------------------------
 
-    private List<Player> players = new ArrayList<>();
+    ArrayList players = new ArrayList();
+    int[] places = new int[6];
     int[] purses = new int[6];
     boolean[] inPenaltyBox = new boolean[6];
 
-    List<String> popQuestions = new LinkedList<>();
-    List<String> scienceQuestions = new LinkedList<>();
-    List<String> sportsQuestions = new LinkedList<>();
-    List<String> rockQuestions = new LinkedList<>();
+    LinkedList popQuestions = new LinkedList();
+    LinkedList scienceQuestions = new LinkedList();
+    LinkedList sportsQuestions = new LinkedList();
+    LinkedList rockQuestions = new LinkedList();
 
     int currentPlayer = 0;
     boolean isGettingOutOfPenaltyBox;
@@ -35,10 +35,10 @@ public class Game implements IGame {
 
     public Game() {
         for (int i = 0; i < 50; i++) {
-            popQuestions.add("Pop Question " + i);
-            scienceQuestions.add(("Science Question " + i));
-            sportsQuestions.add(("Sports Question " + i));
-            rockQuestions.add(createRockQuestion(i));
+            popQuestions.addLast("Pop Question " + i);
+            scienceQuestions.addLast(("Science Question " + i));
+            sportsQuestions.addLast(("Sports Question " + i));
+            rockQuestions.addLast(createRockQuestion(i));
         }
     }
 
@@ -50,8 +50,14 @@ public class Game implements IGame {
         return "Rock Question " + index;
     }
 
+    public boolean isPlayable() {
+        return (howManyPlayers() >= 2);
+    }
+
     public boolean add(String playerName) {
-        players.add(new Player(playerName));
+
+        players.add(playerName);
+        places[howManyPlayers()] = 0;
         purses[howManyPlayers()] = 0;
         inPenaltyBox[howManyPlayers()] = false;
 
@@ -65,29 +71,37 @@ public class Game implements IGame {
     }
 
     public void roll(int roll) {
-        System.out.println(currentPlayer().name() + " is the current player");
+        System.out.println(players.get(currentPlayer) + " is the current player");
         System.out.println("They have rolled a " + roll);
 
         if (inPenaltyBox[currentPlayer]) {
             if ((roll % 2) != 0) {
                 isGettingOutOfPenaltyBox = true;
 
-                System.out.println(currentPlayer().name() + " is getting out of the penalty box");
-                movePlayer(roll);
+                System.out.println(players.get(currentPlayer) + " is getting out of the penalty box");
+                places[currentPlayer] = places[currentPlayer] + roll;
+                if (places[currentPlayer] > 11) {
+                    places[currentPlayer] = places[currentPlayer] - 12;
+                }
 
-                System.out.println(currentPlayer().name() +
-                    "'s new location is " + currentPlayer().place());
+                System.out.println(players.get(currentPlayer) +
+                    "'s new location is " + places[currentPlayer]);
                 System.out.println("The category is " + currentCategory());
                 askQuestion();
             } else {
-                System.out.println(currentPlayer().name() + " is not getting out of the penalty box");
+                System.out.println(players.get(currentPlayer) + " is not getting out of the penalty box");
                 isGettingOutOfPenaltyBox = false;
             }
 
         } else {
-            movePlayer(roll);
-            System.out.println(currentPlayer().name() +
-                "'s new location is " + currentPlayer().place());
+
+            places[currentPlayer] = places[currentPlayer] + roll;
+            if (places[currentPlayer] > 11) {
+                places[currentPlayer] = places[currentPlayer] - 12;
+            }
+
+            System.out.println(players.get(currentPlayer) +
+                "'s new location is " + places[currentPlayer]);
             System.out.println("The category is " + currentCategory());
             askQuestion();
         }
@@ -99,20 +113,22 @@ public class Game implements IGame {
             if (isGettingOutOfPenaltyBox) {
                 System.out.println("Answer was correct!!!!");
                 purses[currentPlayer]++;
-                System.out.println(currentPlayer().name() +
+                System.out.println(players.get(currentPlayer) +
                     " now has " + purses[currentPlayer] +
                     " Gold Coins.");
 
                 boolean winner = didPlayerWin();
                 currentPlayer++;
-                if (currentPlayer == players.size())
+                if (currentPlayer == players.size()) {
                     currentPlayer = 0;
+                }
 
                 return winner;
             } else {
                 currentPlayer++;
-                if (currentPlayer == players.size())
+                if (currentPlayer == players.size()) {
                     currentPlayer = 0;
+                }
                 return true;
             }
 
@@ -120,14 +136,15 @@ public class Game implements IGame {
 
             System.out.println("Answer was corrent!!!!");
             purses[currentPlayer]++;
-            System.out.println(currentPlayer().name() +
+            System.out.println(players.get(currentPlayer) +
                 " now has " + purses[currentPlayer] +
                 " Gold Coins.");
 
             boolean winner = didPlayerWin();
             currentPlayer++;
-            if (currentPlayer == players.size())
+            if (currentPlayer == players.size()) {
                 currentPlayer = 0;
+            }
 
             return winner;
         }
@@ -135,73 +152,63 @@ public class Game implements IGame {
 
     public boolean wrongAnswer() {
         System.out.println("Question was incorrectly answered");
-        System.out.println(currentPlayer().name() + " was sent to the penalty box");
+        System.out.println(players.get(currentPlayer) + " was sent to the penalty box");
         inPenaltyBox[currentPlayer] = true;
 
         currentPlayer++;
-        if (currentPlayer == players.size())
+        if (currentPlayer == players.size()) {
             currentPlayer = 0;
+        }
         return true;
     }
 
-    private void movePlayer(int roll) {
-        currentPlayer().move(roll);
-    }
-
     private void askQuestion() {
-        String currentCategory = currentCategory();
-        String question = "";
-        if (currentCategory.equals("Pop")) {
-            question = popQuestions.remove(0);
-        } else if (currentCategory.equals("Science")) {
-            question = scienceQuestions.remove(0);
-        } else if (currentCategory.equals("Sports")) {
-            question = sportsQuestions.remove(0);
-        } else if (currentCategory.equals("Rock")) {
-            question = rockQuestions.remove(0);
+        if (currentCategory() == "Pop") {
+            System.out.println(popQuestions.removeFirst());
         }
-        System.out.println(question);
+        if (currentCategory() == "Science") {
+            System.out.println(scienceQuestions.removeFirst());
+        }
+        if (currentCategory() == "Sports") {
+            System.out.println(sportsQuestions.removeFirst());
+        }
+        if (currentCategory() == "Rock") {
+            System.out.println(rockQuestions.removeFirst());
+        }
     }
 
     private String currentCategory() {
-        if (currentPlayer().place() == 0)
+        if (places[currentPlayer] == 0) {
             return "Pop";
-        if (currentPlayer().place() == 4)
+        }
+        if (places[currentPlayer] == 4) {
             return "Pop";
-        if (currentPlayer().place() == 8)
+        }
+        if (places[currentPlayer] == 8) {
             return "Pop";
-        if (currentPlayer().place() == 1)
+        }
+        if (places[currentPlayer] == 1) {
             return "Science";
-        if (currentPlayer().place() == 5)
+        }
+        if (places[currentPlayer] == 5) {
             return "Science";
-        if (currentPlayer().place() == 9)
+        }
+        if (places[currentPlayer] == 9) {
             return "Science";
-        if (currentPlayer().place() == 2)
+        }
+        if (places[currentPlayer] == 2) {
             return "Sports";
-        if (currentPlayer().place() == 6)
+        }
+        if (places[currentPlayer] == 6) {
             return "Sports";
-        if (currentPlayer().place() == 10)
+        }
+        if (places[currentPlayer] == 10) {
             return "Sports";
+        }
         return "Rock";
-    }
-
-    private Player currentPlayer() {
-        return players.get(currentPlayer);
     }
 
     private boolean didPlayerWin() {
         return !(purses[currentPlayer] == 6);
     }
 }
-
-/**
- * extract method (replace duplicate code)
- * Inline
- * renamed
- * baby steps: don't break compilation at any moment while refactoring
- * Move Method ---> Player.move(roll) -- with invariants
- * switch [expression]: 1) one lines/case, 2) default 3) no extra code in that method
- * Alt-J
- * Any field you create let it be private final at the start. NOT creating gettters and setters. If you have to create them, create them individually
- * records Java 16+ - immutable structs
- */
